--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "express": "^4.14.0",
     "express-stormpath": "^3.1.6",
     "forms": "^1.3.0",
-    "pug": "*",
+    "pug": "^2.0.0-beta6",
     "request": "^2.79.0",
     "xtend": "^4.0.1"
   }
